005-http_request-prometheus/keda-demo/k8s/ing.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-toolkit
  labels:
    app: devops-toolkit
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: devops-toolkit
                port:
                  number: 80
      host: dot.198.19.249.2.nip.io
